# models/comment.go
@@ -1,0 +1,14 @@
+package models
+
+import (
+	"time"
+)
+
+type Comment struct {
+	ID        string    `json:"id" db:"id"`
+	PostID    string    `json:"post_id" db:"post_id"`
+	AuthorID  string    `json:"author_id" db:"author_id"`
+	Content   string    `json:"content" db:"content"`
+	CreatedAt time.Time `json:"created_at" db:"created_at"`
+	UpdatedAt time.Time `json:"updated_at" db:"updated_at"`
+}
